--- a/15-implement-a-higher-order-component-with-render-props/index.html
+++ b/15-implement-a-higher-order-component-with-render-props/index.html
@@ -76,147 +76,160 @@ by Mauricio Allende (https://mallendeo.com/)
 <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/prop-types@15.6.0/prop-types.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+<script src="https://cdn.rawgit.com/kentcdodds/ea2fdfc82f79228a6be641c78dc0e1b9/raw/0f792eb8dfb3bf993bdf50c9656f12090ed344e6/hoist-non-react-statics.umd.js"></script>
 
 <div id="⚛️"></div>
 
 <script type="text/babel">
-const TOGGLED_CONTEXT = '__toggled__'
-const ToggledOn = withToggled(
-  ({children, toggled}) => {
-    const {on} = toggled
-    return on ? children : null
-  },
-)
-const ToggledOff = withToggled(
-  ({children, toggled}) => {
-    const {on} = toggled
-    return on ? null : children
-  },
-)
-const ToggledButton = withToggled(
-  ({toggled, ...props}) => {
-    return (
-      <Switch
-        on={toggled.on}
-        onClick={toggled.toggle}
-        aria-controls="target"
-        aria-expanded={on}
-        {...props}
-      />
-    )
-  },
-)
+const compose = (...fns) => (...args) =>
+  fns.forEach(fn => fn && fn(...args))
+
 class Toggled extends React.Component {
-  static On = ToggledOn
-  static Off = ToggledOff
-  static Button = ToggledButton
-  static childContextTypes = {
-    [TOGGLED_CONTEXT]:
-      PropTypes.object.isRequired,
+  static defaultProps = {
+    defaultOn: false,
+    onReset: () => {},
+    onToggle: () => {},
+  }
+  initialState = {on: this.props.defaultOn}
+  state = this.initialState
+  reset = () => {
+    if (this.isOnControlled()) {
+      this.props.onReset()
+    } else {
+      this.setState(
+        this.initialState,
+        this.props.onReset,
+      )
+    }
+  }
+  toggle = () => {
+    if (this.isOnControlled()) {
+      this.props.onToggle()
+    } else {
+      this.setState(
+        ({on}) => ({on: !on}),
+        this.props.onToggle,
+      )
+    }
   }
 
-  state = {on: false}
-  toggle = () =>
-    this.setState(
-      ({on}) => ({on: !on}),
-      this.props.onToggle,
-    )
-  getChildContext() {
-    return {
-      [TOGGLED_CONTEXT]: {
-        on: this.state.on,
-        toggle: this.toggle,
-      },
+  getTogglerProps = ({
+    onClick,
+    ...remainingProps
+  }) => ({
+    onClick: compose(onClick, this.toggle),
+    'aria-controls': 'target',
+    'aria-expanded': this.state.on,
+    ...remainingProps,
+  })
+  isOnControlled() {
+    return this.props.on !== undefined
+  }
+  render() {
+    return this.props.render({
+      on: this.isOnControlled()
+        ? this.props.on
+        : this.state.on,
+      getTogglerProps: this.getTogglerProps,
+      toggle: this.toggle,
+      reset: this.reset,
+    })
+  }
+}
+
+class ToggledProvider extends React.Component {
+  static contextName = '__toggled__'
+  static Renderer = class extends React.Component {
+    static childContextTypes = {
+      [ToggledProvider.contextName]:
+        PropTypes.object.isRequired,
+    }
+    getChildContext() {
+      return {
+        [ToggledProvider.contextName]: this.props
+          .toggled,
+      }
+    }
+    render() {
+      return this.props.children
     }
   }
   render() {
-    return <div>{this.props.children}</div>
+    const {
+      children,
+      ...remainingProps
+    } = this.props
+    return (
+      <Toggled
+        {...remainingProps}
+        render={toggled => (
+          <ToggledProvider.Renderer
+            toggled={toggled}
+            children={children}
+          />
+        )}
+      />
+    )
   }
+}
+
+function ToggledController(props, context) {
+  return props.render(
+    context[ToggledProvider.contextName],
+  )
+}
+ToggledController.contextTypes = {
+  [ToggledProvider.contextName]:
+    PropTypes.object.isRequired,
 }
 
 function withToggled(Component) {
   function Wrapper(props, context) {
-    const toggledContext =
-      context[TOGGLED_CONTEXT]
     const {innerRef, ...remainingProps} = props
     return (
-      <Component
-        {...remainingProps}
-        toggled={toggledContext}
-        ref={innerRef}
+      <ToggledController
+        render={toggled => (
+          <Component
+            {...remainingProps}
+            toggled={toggled}
+            ref={innerRef}
+          />
+        )}
       />
     )
   }
 
-  Wrapper.contextTypes = {
-    [TOGGLED_CONTEXT]:
-      PropTypes.object.isRequired,
-  }
   Wrapper.displayName = `withToggled(${Component.displayName ||
     Component.name})`
   Wrapper.propTypes = {innerRef: PropTypes.func}
   Wrapper.WrappedComponent = Component
 
-  return Wrapper
+  return hoistNonReactStatics(Wrapper, Component)
 }
 
-class ToggleInfo extends React.Component {
-  render() {
-    const {toggled} = this.props
-    return (
-      <div>
-        The button is {toggled.on ? 'on' : 'off'}.
-        But you can change that state by clicking
-        the switch or clicking this button:{' '}
-        <button onClick={toggled.toggle}>
-          Toggle
-        </button>
-      </div>
-    )
-  }
-}
-
-const WrappedToggleInfo = withToggled(ToggleInfo)
-
-function test() {
-  const div = document.createElement('div')
-  document.body.appendChild(div)
-  const toggle = () => (toggle.called = true)
-  ReactDOM.render(
-    <WrappedToggleInfo.WrappedComponent
-      toggled={{on: true, toggle}}
-    />,
-    div,
-  )
-  if (
-    !div.innerHTML.includes('The button is on')
-  ) {
-    throw new Error(
-      `Contents are wrong: ${div.innerHTML}`,
-    )
-  }
-  const button = div.getElementsByTagName(
-    'button',
-  )[0]
-  button.click()
-  if (!toggle.called) {
-    throw new Error('toggle not called!')
-  }
-}
-
-test()
+const ShowMore = withToggled(
+  ({number, toggled}) => (
+    <div>
+      Switch {number}
+      <Switch
+        {...toggled.getTogglerProps({
+          on: toggled.on,
+        })}
+      />
+      {toggled.on ? (
+        <ToggledProvider>
+          <ShowMore number={number + 1} />
+        </ToggledProvider>
+      ) : null}
+    </div>
+  ),
+)
 
 function App() {
   return (
-    <Toggled>
-      <Toggled.On>The button is on</Toggled.On>
-      <Toggled.Off>The button is off</Toggled.Off>
-      <div>
-        <Toggled.Button />
-      </div>
-      <hr />
-      <WrappedToggleInfo />
-    </Toggled>
+    <ToggledProvider defaultOn={true}>
+      <ShowMore number={0} />
+    </ToggledProvider>
   )
 }
 
