--- a/02-compound-components/index.html
+++ b/02-compound-components/index.html
@@ -87,13 +87,7 @@ function ToggledOff({on, children}) {
 }
 function ToggledButton({on, toggle, ...props}) {
   return (
-    <Switch
-      on={on}
-      onClick={toggle}
-      aria-controls="target"
-      aria-expanded={on}
-      {...props}
-    />
+    <Switch on={on} onClick={toggle} {...props} />
   )
 }
 class Toggled extends React.Component {
@@ -150,6 +144,8 @@ function Switch({on, className = '', ...props}) {
         className={`${className} toggle-btn ${on
           ? 'toggle-btn-on'
           : 'toggle-btn-off'}`}
+        aria-controls="target"
+        aria-expanded={on}
         {...props}
       />
     </div>
