--- a/08-merge-context-properly-with-higher-order-components/index.html
+++ b/08-merge-context-properly-with-higher-order-components/index.html
@@ -80,34 +80,34 @@ by Mauricio Allende (https://mallendeo.com/)
 <div id="⚛️"></div>
 
 <script type="text/babel">
-const TOGGLED_CONTEXT = '__toggled__'
-const ToggledOn = withToggled(
-  ({children, toggled}) => {
-    const {on} = toggled
+const TOGGLED_CONTEXT = '__toggle__'
+const ToggleOn = withToggle(
+  ({children, toggle}) => {
+    const {on} = toggle
     return on ? children : null
   },
 )
-const ToggledOff = withToggled(
-  ({children, toggled}) => {
-    const {on} = toggled
+const ToggleOff = withToggle(
+  ({children, toggle}) => {
+    const {on} = toggle
     return on ? null : children
   },
 )
-const ToggledButton = withToggled(
-  ({toggled, ...props}) => {
+const ToggleButton = withToggle(
+  ({toggle, ...props}) => {
     return (
       <Switch
-        on={toggled.on}
-        onClick={toggled.toggle}
+        on={toggle.on}
+        onClick={toggle.toggle}
         {...props}
       />
     )
   },
 )
-class Toggled extends React.Component {
-  static On = ToggledOn
-  static Off = ToggledOff
-  static Button = ToggledButton
+class Toggle extends React.Component {
+  static On = ToggleOn
+  static Off = ToggleOff
+  static Button = ToggleButton
   static childContextTypes = {
     [TOGGLED_CONTEXT]:
       PropTypes.object.isRequired,
@@ -160,15 +160,14 @@ function setMergeableContextTypes(
   )
 }
 
-function withToggled(Component) {
+function withToggle(Component) {
   function Wrapper(props, context) {
-    const toggledContext =
-      context[TOGGLED_CONTEXT]
+    const toggleContext = context[TOGGLED_CONTEXT]
     const {innerRef, ...remainingProps} = props
     return (
       <Component
         {...remainingProps}
-        toggled={toggledContext}
+        toggle={toggleContext}
         ref={innerRef}
       />
     )
@@ -179,7 +178,7 @@ function withToggled(Component) {
       PropTypes.object.isRequired,
   })
 
-  Wrapper.displayName = `withToggled(${Component.displayName ||
+  Wrapper.displayName = `withToggle(${Component.displayName ||
     Component.name})`
   Wrapper.propTypes = {innerRef: PropTypes.func}
   Wrapper.WrappedComponent = Component
@@ -231,13 +230,13 @@ function withLanguage(Component) {
 
 class ToggleInfo extends React.Component {
   render() {
-    const {toggled, language} = this.props
+    const {toggle, language} = this.props
     return (
       <div>
-        The button is {toggled.on ? 'on' : 'off'}.
+        The button is {toggle.on ? 'on' : 'off'}.
         But you can change that state by clicking
         the switch or clicking this button:{' '}
-        <button onClick={toggled.toggle}>
+        <button onClick={toggle.toggle}>
           Toggle
         </button>
         <div>Oh, and the language code is </div>
@@ -248,23 +247,21 @@ class ToggleInfo extends React.Component {
 }
 
 const WrappedToggleInfoWithLanguage = withLanguage(
-  withToggled(ToggleInfo),
+  withToggle(ToggleInfo),
 )
 
 function App() {
   return (
     <LanguageProvider code="en-US">
-      <Toggled>
-        <Toggled.On>The button is on</Toggled.On>
-        <Toggled.Off>
-          The button is off
-        </Toggled.Off>
+      <Toggle>
+        <Toggle.On>The button is on</Toggle.On>
+        <Toggle.Off>The button is off</Toggle.Off>
         <div>
-          <Toggled.Button />
+          <Toggle.Button />
         </div>
         <hr />
         <WrappedToggleInfoWithLanguage />
-      </Toggled>
+      </Toggle>
     </LanguageProvider>
   )
 }
@@ -301,13 +298,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
