--- a/10-use-render-props/index.html
+++ b/10-use-render-props/index.html
@@ -80,7 +80,7 @@ by Mauricio Allende (https://mallendeo.com/)
 <div id="⚛️"></div>
 
 <script type="text/babel">
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   state = {on: false}
   toggle = () =>
     this.setState(
@@ -97,11 +97,11 @@ class Toggled extends React.Component {
 
 function App() {
   return (
-    <Toggled
-      render={toggled => (
+    <Toggle
+      render={toggle => (
         <Switch
-          on={toggled.on}
-          onClick={toggled.toggle}
+          on={toggle.on}
+          onClick={toggle.toggle}
         />
       )}
     />
@@ -140,13 +140,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
