--- a/11-use-prop-getters/index.html
+++ b/11-use-prop-getters/index.html
@@ -83,7 +83,7 @@ by Mauricio Allende (https://mallendeo.com/)
 const compose = (...fns) => (...args) =>
   fns.forEach(fn => fn && fn(...args))
 
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   state = {on: false}
   toggle = () =>
     this.setState(
@@ -110,11 +110,11 @@ class Toggled extends React.Component {
 
 function App() {
   return (
-    <Toggled
-      render={toggled => (
+    <Toggle
+      render={toggle => (
         <Switch
-          {...toggled.getTogglerProps({
-            on: toggled.on,
+          {...toggle.getTogglerProps({
+            on: toggle.on,
             onClick: () => console.log('clicked'),
           })}
         />
@@ -153,13 +153,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
