--- a/13-use-control-props/index.html
+++ b/13-use-control-props/index.html
@@ -83,7 +83,7 @@ by Mauricio Allende (https://mallendeo.com/)
 const compose = (...fns) => (...args) =>
   fns.forEach(fn => fn && fn(...args))
 
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   static defaultProps = {
     defaultOn: false,
     onReset: () => {},
@@ -152,22 +152,22 @@ class App extends React.Component {
   render() {
     const {timesClicked, on} = this.state
     return (
-      <Toggled
+      <Toggle
         on={on}
         onToggle={this.handleToggle}
         onReset={this.handleReset}
-        render={toggled => (
+        render={toggle => (
           <div>
             <Switch
-              {...toggled.getTogglerProps({
-                on: toggled.on,
+              {...toggle.getTogglerProps({
+                on: toggle.on,
               })}
             />
             {timesClicked > 4 ? (
               <div>
                 Whoa, you've clicked too much!
                 <br />
-                <button onClick={toggled.reset}>
+                <button onClick={toggle.reset}>
                   reset
                 </button>
               </div>
@@ -213,13 +213,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
