--- a/14-implement-a-provider-with-render-props/index.html
+++ b/14-implement-a-provider-with-render-props/index.html
@@ -83,7 +83,7 @@ by Mauricio Allende (https://mallendeo.com/)
 const compose = (...fns) => (...args) =>
   fns.forEach(fn => fn && fn(...args))
 
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   static defaultProps = {
     defaultOn: false,
     onReset: () => {},
@@ -136,17 +136,17 @@ class Toggled extends React.Component {
   }
 }
 
-class ToggledProvider extends React.Component {
-  static contextName = '__toggled__'
+class ToggleProvider extends React.Component {
+  static contextName = '__toggle__'
   static Renderer = class extends React.Component {
     static childContextTypes = {
-      [ToggledProvider.contextName]:
+      [ToggleProvider.contextName]:
         PropTypes.object.isRequired,
     }
     getChildContext() {
       return {
-        [ToggledProvider.contextName]: this.props
-          .toggled,
+        [ToggleProvider.contextName]: this.props
+          .toggle,
       }
     }
     render() {
@@ -159,11 +159,11 @@ class ToggledProvider extends React.Component {
       ...remainingProps
     } = this.props
     return (
-      <Toggled
+      <Toggle
         {...remainingProps}
-        render={toggled => (
-          <ToggledProvider.Renderer
-            toggled={toggled}
+        render={toggle => (
+          <ToggleProvider.Renderer
+            toggle={toggle}
             children={children}
           />
         )}
@@ -172,31 +172,31 @@ class ToggledProvider extends React.Component {
   }
 }
 
-function ToggledController(props, context) {
+function ToggleController(props, context) {
   return props.render(
-    context[ToggledProvider.contextName],
+    context[ToggleProvider.contextName],
   )
 }
-ToggledController.contextTypes = {
-  [ToggledProvider.contextName]:
+ToggleController.contextTypes = {
+  [ToggleProvider.contextName]:
     PropTypes.object.isRequired,
 }
 
 function ShowMore({number}) {
   return (
-    <ToggledController
-      render={toggled => (
+    <ToggleController
+      render={toggle => (
         <div>
           Switch {number}
           <Switch
-            {...toggled.getTogglerProps({
-              on: toggled.on,
+            {...toggle.getTogglerProps({
+              on: toggle.on,
             })}
           />
-          {toggled.on ? (
-            <ToggledProvider>
+          {toggle.on ? (
+            <ToggleProvider>
               <ShowMore number={number + 1} />
-            </ToggledProvider>
+            </ToggleProvider>
           ) : null}
         </div>
       )}
@@ -206,9 +206,9 @@ function ShowMore({number}) {
 
 function App() {
   return (
-    <ToggledProvider defaultOn={true}>
+    <ToggleProvider defaultOn={true}>
       <ShowMore number={0} />
-    </ToggledProvider>
+    </ToggleProvider>
   )
 }
 
@@ -242,13 +242,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
