--- a/15-implement-a-higher-order-component-with-render-props/index.html
+++ b/15-implement-a-higher-order-component-with-render-props/index.html
@@ -84,7 +84,7 @@ by Mauricio Allende (https://mallendeo.com/)
 const compose = (...fns) => (...args) =>
   fns.forEach(fn => fn && fn(...args))
 
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   static defaultProps = {
     defaultOn: false,
     onReset: () => {},
@@ -137,17 +137,17 @@ class Toggled extends React.Component {
   }
 }
 
-class ToggledProvider extends React.Component {
-  static contextName = '__toggled__'
+class ToggleProvider extends React.Component {
+  static contextName = '__toggle__'
   static Renderer = class extends React.Component {
     static childContextTypes = {
-      [ToggledProvider.contextName]:
+      [ToggleProvider.contextName]:
         PropTypes.object.isRequired,
     }
     getChildContext() {
       return {
-        [ToggledProvider.contextName]: this.props
-          .toggled,
+        [ToggleProvider.contextName]: this.props
+          .toggle,
       }
     }
     render() {
@@ -160,11 +160,11 @@ class ToggledProvider extends React.Component {
       ...remainingProps
     } = this.props
     return (
-      <Toggled
+      <Toggle
         {...remainingProps}
-        render={toggled => (
-          <ToggledProvider.Renderer
-            toggled={toggled}
+        render={toggle => (
+          <ToggleProvider.Renderer
+            toggle={toggle}
             children={children}
           />
         )}
@@ -173,25 +173,25 @@ class ToggledProvider extends React.Component {
   }
 }
 
-function ToggledController(props, context) {
+function ToggleController(props, context) {
   return props.render(
-    context[ToggledProvider.contextName],
+    context[ToggleProvider.contextName],
   )
 }
-ToggledController.contextTypes = {
-  [ToggledProvider.contextName]:
+ToggleController.contextTypes = {
+  [ToggleProvider.contextName]:
     PropTypes.object.isRequired,
 }
 
-function withToggled(Component) {
+function withToggle(Component) {
   function Wrapper(props, context) {
     const {innerRef, ...remainingProps} = props
     return (
-      <ToggledController
-        render={toggled => (
+      <ToggleController
+        render={toggle => (
           <Component
             {...remainingProps}
-            toggled={toggled}
+            toggle={toggle}
             ref={innerRef}
           />
         )}
@@ -199,7 +199,7 @@ function withToggled(Component) {
     )
   }
 
-  Wrapper.displayName = `withToggled(${Component.displayName ||
+  Wrapper.displayName = `withToggle(${Component.displayName ||
     Component.name})`
   Wrapper.propTypes = {innerRef: PropTypes.func}
   Wrapper.WrappedComponent = Component
@@ -207,19 +207,19 @@ function withToggled(Component) {
   return hoistNonReactStatics(Wrapper, Component)
 }
 
-const ShowMore = withToggled(
-  ({number, toggled}) => (
+const ShowMore = withToggle(
+  ({number, toggle}) => (
     <div>
       Switch {number}
       <Switch
-        {...toggled.getTogglerProps({
-          on: toggled.on,
+        {...toggle.getTogglerProps({
+          on: toggle.on,
         })}
       />
-      {toggled.on ? (
-        <ToggledProvider>
+      {toggle.on ? (
+        <ToggleProvider>
           <ShowMore number={number + 1} />
-        </ToggledProvider>
+        </ToggleProvider>
       ) : null}
     </div>
   ),
@@ -227,9 +227,9 @@ const ShowMore = withToggled(
 
 function App() {
   return (
-    <ToggledProvider defaultOn={true}>
+    <ToggleProvider defaultOn={true}>
       <ShowMore number={0} />
-    </ToggledProvider>
+    </ToggleProvider>
   )
 }
 
@@ -263,13 +263,13 @@ function Switch({on, className = '', ...props}) {
 ReactDOM.render(
   <div
     style={{
+      marginTop: 40,
       display: 'flex',
       justifyContent: 'center',
       flexDirection: 'column',
       textAlign: 'center',
     }}
   >
-    <h2>react-toggled</h2>
     <App />
   </div>,
   document.getElementById('⚛️'),
