--- a/01-intro-to-react-toggled/index.html
+++ b/01-intro-to-react-toggled/index.html
@@ -79,7 +79,7 @@ by Mauricio Allende (https://mallendeo.com/)
 <div id="⚛️"></div>
 
 <script type="text/babel">
-class Toggled extends React.Component {
+class Toggle extends React.Component {
   state = {on: false}
   toggle = () =>
     this.setState(
@@ -95,7 +95,7 @@ class Toggled extends React.Component {
 }
 
 function App() {
-  return <Toggled />
+  return <Toggle />
 }
 
 /*
