--- a/01-intro-to-react-toggled/index.html
+++ b/01-intro-to-react-toggled/index.html
@@ -84,7 +84,9 @@ class Toggle extends React.Component {
   toggle = () =>
     this.setState(
       ({on}) => ({on: !on}),
-      this.props.onToggle,
+      () => {
+        this.props.onToggle(this.state.on)
+      },
     )
   render() {
     const {on} = this.state
@@ -93,9 +95,10 @@ class Toggle extends React.Component {
     )
   }
 }
-
 function App() {
-  return <Toggle />
+  return (
+    <Toggle onToggle={on => console.log(on)} />
+  )
 }
 
 /*
