--- a/16-rerender-descendants-through-shouldcomponentupdate/index.html
+++ b/16-rerender-descendants-through-shouldcomponentupdate/index.html
@@ -88,8 +88,8 @@ const compose = (...fns) => (...args) =>
 class Toggle extends React.Component {
   static defaultProps = {
     defaultOn: false,
-    onReset: () => {},
     onToggle: () => {},
+    onReset: () => {},
   }
   initialState = {on: this.props.defaultOn}
   state = this.initialState
@@ -97,9 +97,8 @@ class Toggle extends React.Component {
     if (this.isOnControlled()) {
       this.props.onReset()
     } else {
-      this.setState(
-        this.initialState,
-        this.props.onReset,
+      this.setState(this.initialState, () =>
+        this.props.onReset(this.state.on),
       )
     }
   }
@@ -109,7 +108,7 @@ class Toggle extends React.Component {
     } else {
       this.setState(
         ({on}) => ({on: !on}),
-        this.props.onToggle,
+        () => this.props.onToggle(this.state.on),
       )
     }
   }
