--- a/08-merge-context-properly-with-higher-order-components/index.html
+++ b/08-merge-context-properly-with-higher-order-components/index.html
@@ -108,6 +108,7 @@ class Toggle extends React.Component {
   static On = ToggleOn
   static Off = ToggleOff
   static Button = ToggleButton
+  static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
     [TOGGLED_CONTEXT]:
       PropTypes.object.isRequired,
@@ -117,7 +118,7 @@ class Toggle extends React.Component {
   toggle = () =>
     this.setState(
       ({on}) => ({on: !on}),
-      this.props.onToggle,
+      () => this.props.onToggle(this.state.on),
     )
   getChildContext() {
     return {
@@ -253,7 +254,9 @@ const WrappedToggleInfoWithLanguage = withLanguage(
 function App() {
   return (
     <LanguageProvider code="en-US">
-      <Toggle>
+      <Toggle
+        onToggle={on => console.log('toggle', on)}
+      >
         <Toggle.On>The button is on</Toggle.On>
         <Toggle.Off>The button is off</Toggle.Off>
         <div>
