--- a/09-handle-statics-properly-with-higher-order-components/index.html
+++ b/09-handle-statics-properly-with-higher-order-components/index.html
@@ -109,6 +109,7 @@ class Toggle extends React.Component {
   static On = ToggleOn
   static Off = ToggleOff
   static Button = ToggleButton
+  static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
     [TOGGLED_CONTEXT]:
       PropTypes.object.isRequired,
@@ -118,7 +119,7 @@ class Toggle extends React.Component {
   toggle = () =>
     this.setState(
       ({on}) => ({on: !on}),
-      this.props.onToggle,
+      () => this.props.onToggle(this.state.on),
     )
   getChildContext() {
     return {
@@ -211,7 +212,9 @@ const WrappedToggleInfo = withToggle(ToggleInfo)
 
 function App() {
   return (
-    <Toggle>
+    <Toggle
+      onToggle={on => console.log('toggle', on)}
+    >
       <Toggle.On>The button is on</Toggle.On>
       <Toggle.Off>The button is off</Toggle.Off>
       <div>
