--- a/10-use-render-props/index.html
+++ b/10-use-render-props/index.html
@@ -81,11 +81,12 @@ by Mauricio Allende (https://mallendeo.com/)
 
 <script type="text/babel">
 class Toggle extends React.Component {
+  static defaultProps = {onToggle: () => {}}
   state = {on: false}
   toggle = () =>
     this.setState(
       ({on}) => ({on: !on}),
-      this.props.onToggle,
+      () => this.props.onToggle(this.state.on),
     )
   render() {
     return this.props.render({
@@ -98,6 +99,7 @@ class Toggle extends React.Component {
 function App() {
   return (
     <Toggle
+      onToggle={on => console.log('toggle', on)}
       render={toggle => (
         <Switch
           on={toggle.on}
