--- a/14-implement-a-provider-with-render-props/index.html
+++ b/14-implement-a-provider-with-render-props/index.html
@@ -86,8 +86,8 @@ const compose = (...fns) => (...args) =>
 class Toggle extends React.Component {
   static defaultProps = {
     defaultOn: false,
-    onReset: () => {},
     onToggle: () => {},
+    onReset: () => {},
   }
   initialState = {on: this.props.defaultOn}
   state = this.initialState
@@ -95,9 +95,8 @@ class Toggle extends React.Component {
     if (this.isOnControlled()) {
       this.props.onReset()
     } else {
-      this.setState(
-        this.initialState,
-        this.props.onReset,
+      this.setState(this.initialState, () =>
+        this.props.onReset(this.state.on),
       )
     }
   }
@@ -107,7 +106,7 @@ class Toggle extends React.Component {
     } else {
       this.setState(
         ({on}) => ({on: !on}),
-        this.props.onToggle,
+        () => this.props.onToggle(this.state.on),
       )
     }
   }
