--- a/05-improve-display-name-with-higher-order-components/index.html
+++ b/05-improve-display-name-with-higher-order-components/index.html
@@ -80,7 +80,7 @@ by Mauricio Allende (https://mallendeo.com/)
 <div id="⚛️"></div>
 
 <script type="text/babel">
-const TOGGLED_CONTEXT = '__toggle__'
+const TOGGLE_CONTEXT = '__toggle__'
 const ToggleOn = withToggle(
   ({children, toggle}) => {
     const {on} = toggle
@@ -110,7 +110,7 @@ class Toggle extends React.Component {
   static Button = ToggleButton
   static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
-    [TOGGLED_CONTEXT]:
+    [TOGGLE_CONTEXT]:
       PropTypes.object.isRequired,
   }
 
@@ -122,7 +122,7 @@ class Toggle extends React.Component {
     )
   getChildContext() {
     return {
-      [TOGGLED_CONTEXT]: {
+      [TOGGLE_CONTEXT]: {
         on: this.state.on,
         toggle: this.toggle,
       },
@@ -135,7 +135,7 @@ class Toggle extends React.Component {
 
 function withToggle(Component) {
   function Wrapper(props, context) {
-    const toggleContext = context[TOGGLED_CONTEXT]
+    const toggleContext = context[TOGGLE_CONTEXT]
     return (
       <Component
         {...props}
@@ -145,7 +145,7 @@ function withToggle(Component) {
   }
 
   Wrapper.contextTypes = {
-    [TOGGLED_CONTEXT]:
+    [TOGGLE_CONTEXT]:
       PropTypes.object.isRequired,
   }
   Wrapper.displayName = `withToggle(${Component.displayName ||
