--- a/09-handle-statics-properly-with-higher-order-components/index.html
+++ b/09-handle-statics-properly-with-higher-order-components/index.html
@@ -81,7 +81,7 @@ by Mauricio Allende (https://mallendeo.com/)
 <div id="⚛️"></div>
 
 <script type="text/babel">
-const TOGGLED_CONTEXT = '__toggle__'
+const TOGGLE_CONTEXT = '__toggle__'
 const ToggleOn = withToggle(
   ({children, toggle}) => {
     const {on} = toggle
@@ -111,7 +111,7 @@ class Toggle extends React.Component {
   static Button = ToggleButton
   static defaultProps = {onToggle: () => {}}
   static childContextTypes = {
-    [TOGGLED_CONTEXT]:
+    [TOGGLE_CONTEXT]:
       PropTypes.object.isRequired,
   }
 
@@ -123,7 +123,7 @@ class Toggle extends React.Component {
     )
   getChildContext() {
     return {
-      [TOGGLED_CONTEXT]: {
+      [TOGGLE_CONTEXT]: {
         on: this.state.on,
         toggle: this.toggle,
       },
@@ -164,7 +164,7 @@ function setMergeableContextTypes(
 
 function withToggle(Component) {
   function Wrapper(props, context) {
-    const toggleContext = context[TOGGLED_CONTEXT]
+    const toggleContext = context[TOGGLE_CONTEXT]
     const {innerRef, ...remainingProps} = props
     return (
       <Component
@@ -176,7 +176,7 @@ function withToggle(Component) {
   }
 
   setMergeableContextTypes(Wrapper, {
-    [TOGGLED_CONTEXT]:
+    [TOGGLE_CONTEXT]:
       PropTypes.object.isRequired,
   })
 
